--- a/Sources/FormInput/FormInputViews/FormTextView/FormTextView.xib
+++ b/Sources/FormInput/FormInputViews/FormTextView/FormTextView.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FormTextView" customModule="FormView">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FormTextView" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="393" height="466"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
