--- a/Sources/FormInput/FormInputViews/FormTextView/FormTextView.xib
+++ b/Sources/FormInput/FormInputViews/FormTextView/FormTextView.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="466"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" textAlignment="natural" findInteractionEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b9h-Su-JbT" customClass="PlaceholderTextView" customModule="FormInput">
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" textAlignment="natural" findInteractionEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b9h-Su-JbT" customClass="PlaceholderTextView" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="59" width="393" height="373"/>
                     <color key="backgroundColor" systemColor="systemGray6Color"/>
                     <constraints>
