--- a/Sources/FormInput/FormInputViews/FormPhotoPicker/FormPhotoPicker.xib
+++ b/Sources/FormInput/FormInputViews/FormPhotoPicker/FormPhotoPicker.xib
@@ -1,18 +1,66 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FormPhotoPicker" customModule="FormInput">
+            <rect key="frame" x="0.0" y="0.0" width="393" height="153"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="uhL-Mh-lSM">
+                    <rect key="frame" x="0.0" y="0.0" width="393" height="153"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34D-jx-ghr">
+                            <rect key="frame" x="20" y="0.0" width="353" height="18"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="58Z-QO-Mdk">
+                            <rect key="frame" x="0.0" y="22" width="393" height="131"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="KwM-rh-20h">
+                                <size key="itemSize" width="128" height="128"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="58Z-QO-Mdk" firstAttribute="leading" secondItem="uhL-Mh-lSM" secondAttribute="leading" id="YU1-m4-GWZ"/>
+                        <constraint firstAttribute="trailing" secondItem="58Z-QO-Mdk" secondAttribute="trailing" id="lUJ-fj-n5a"/>
+                        <constraint firstItem="34D-jx-ghr" firstAttribute="leading" secondItem="uhL-Mh-lSM" secondAttribute="leading" constant="20" id="ujG-UB-xLC"/>
+                    </constraints>
+                </stackView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="uhL-Mh-lSM" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="2So-T2-D3m"/>
+                <constraint firstItem="uhL-Mh-lSM" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="ds5-VI-0OI"/>
+                <constraint firstItem="uhL-Mh-lSM" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="mCw-up-ePa"/>
+                <constraint firstAttribute="bottom" secondItem="uhL-Mh-lSM" secondAttribute="bottom" id="z9k-O2-j2G"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="collectionView" destination="58Z-QO-Mdk" id="rTV-qc-dzn"/>
+                <outlet property="titleLabel" destination="34D-jx-ghr" id="8rF-XE-cQD"/>
+            </connections>
+            <point key="canvasLocation" x="43.511450381679388" y="266.54929577464787"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
