--- a/Sources/FormInput/FormInputViews/FormPhotoPicker/PhotoCollectionCell/PhotoCollectionCell.xib
+++ b/Sources/FormInput/FormInputViews/FormPhotoPicker/PhotoCollectionCell/PhotoCollectionCell.xib
@@ -1,21 +1,62 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PhotoCollectionCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="PhotoCollectionCell" customModule="FormInput">
+            <rect key="frame" x="0.0" y="0.0" width="196" height="166"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="196" height="166"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UoM-nG-EIi">
+                        <rect key="frame" x="0.0" y="0.0" width="196" height="166"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="12"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="play.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0Qp-ec-YhT">
+                        <rect key="frame" x="74" y="60.000000000000007" width="48" height="46.666666666666664"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="48" id="4hP-BU-QxW"/>
+                            <constraint firstAttribute="height" constant="48" id="ais-tQ-Z8Y"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <integer key="value" value="24"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </imageView>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="0Qp-ec-YhT" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="2lM-T8-MZp"/>
+                <constraint firstAttribute="bottom" secondItem="UoM-nG-EIi" secondAttribute="bottom" id="3PZ-Le-uVO"/>
+                <constraint firstItem="UoM-nG-EIi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="9G2-GW-kMl"/>
+                <constraint firstItem="0Qp-ec-YhT" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="Q2F-1f-PWl"/>
+                <constraint firstAttribute="trailing" secondItem="UoM-nG-EIi" secondAttribute="trailing" id="WZg-AC-R34"/>
+                <constraint firstItem="UoM-nG-EIi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="gnO-Xo-Hwi"/>
+            </constraints>
+            <size key="customSize" width="196" height="166"/>
+            <connections>
+                <outlet property="imageView" destination="UoM-nG-EIi" id="Yx0-jr-fpy"/>
+                <outlet property="playIcon" destination="0Qp-ec-YhT" id="kbU-TC-EOd"/>
+            </connections>
+            <point key="canvasLocation" x="157.25190839694656" y="61.267605633802823"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="play.circle.fill" catalog="system" width="128" height="123"/>
+    </resources>
 </document>
